<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/modEditar"
        android:title="@string/mod_editar"
        android:orderInCategory="100">

    </item>
    <item
        android:id="@+id/modVerPostulantes"
        android:title="@string/mod_publicar"
        android:orderInCategory="101">

    </item>
    <item
        android:id="@+id/modVerCandidatos"
        android:title="@string/mod_desactivarVacante"
        android:orderInCategory="102">

    </item>

    <item
        android:id="@+id/moAcerca"
        android:title="@string/mo_lista"
        android:orderInCategory="104">

    </item>
    <item
        android:id="@+id/moCreditos"
        android:title="@string/mo_creditos"
        android:orderInCategory="105">

    </item>
</menu>