<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_agregarvacante"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.jboard.prototipo.Fragments.AgregarvacanteFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav_titulo"/>

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/fav_pbProgress"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone" />

    <ScrollView
        android:id="@+id/fav_svScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/fav_llForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--<TextView
                android:text="@string/fav_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fav_tvTitulo"
                android:layout_gravity="center"
                android:textSize="@dimen/ar_titulo"
                android:textAlignment="center"/>-->
            <TextView
                android:text="@string/fav_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fav_tvDesc"
                android:layout_gravity="center"
                android:textSize="@dimen/ar_texto"
                android:textAlignment="center"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fav_tilVacante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ad_tvVacante"
                    android:id="@+id/fav_etVacante"

                    android:inputType="textPersonName"
                    android:textSize="@dimen/ar_texto"
                    android:maxLines="1"
                    android:layout_gravity="center"/>

            </android.support.design.widget.TextInputLayout>
            <!--android:inputType="textPersonName"-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/fav_tilDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fd_descripcion"
                    android:id="@+id/fav_etDesc"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/ar_texto"
                    android:maxLines="1"
                    android:layout_gravity="center"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/fav_tilTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ad_tvTelefono"
                    android:id="@+id/fav_etTel"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/ar_texto"
                    android:maxLines="1"
                    android:layout_gravity="center"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/fav_tilCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ad_tvCorreo"
                    android:id="@+id/fav_etCorreo"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/ar_texto"
                    android:maxLines="1"
                    android:layout_gravity="center"/>

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLimpiar"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/aa_layout_marginTop"
                    android:text="@string/aa_btnCancelar"
                    android:layout_weight="1"
                    android:theme="@style/BotonRaised"

                    android:layout_gravity="center"/>
                <Button
                    android:id="@+id/btnAgregarVacante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/aa_layout_marginTop"
                    android:text="@string/ar_btnAceptar"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:theme="@style/BotonRaised"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>